src/styles/templates/page.narrow.scss
@import "~bulma/sass/utilities/initial-variables.sass";
@import "../variables.scss";

.page-narrow {
  .title {
    max-width: 880px;
    font-size: 15px;
    margin: auto;

    h1 {
      color: #0090fc;
      font-family: 'neuzeitgroteskblack';
      line-height: 1.5;
      display: block;
      clear: both;
      font-weight: bold;
      padding-top: 4px;
      font-size: 18px;
      letter-spacing: 2px;
      margin: 0;

      @media screen and (min-width: $tablet) {
        font-size: 36px;
        margin: 0 auto 15px;
      }
    }
  }

  .page-content {
    max-width: 880px;
    font-size: 15px;
    margin: auto;
    padding: 0.75rem;
    overflow-x: scroll;

    @media screen and (min-width: $tablet) {
      padding: 0;
    }

    strong {
      color: inherit;
    }

    h2, h3 {
      font-family: "neuzeit_grotesk_light";
      line-height: 1.5;
      letter-spacing: 2px;
    }

    h2 {
      font-size: 31px;
      font-family: "neuzeit_grotesk_light";
      letter-spacing: 0.1px;
      font-weight: bold;
      margin: 20px 0;
    }

    h3 {
      font-size: 1em;
      margin-bottom: 1em;

      span {
        font-weight: bold;
        font-size: 20px;

        @media screen and (min-width: $tablet) {
          font-size: 28px;
        }
      }
      @media screen and (min-width: $tablet) {
        font-size: 1.5em;
      }
    }

    p {
      margin: 0 0 15px;
      font-style: normal;
      line-height: 1.6em;
      font-size: 15px;
    }

    ul {
      list-style: disc outside;
      padding-left: 40px;

      li {
        margin-bottom: 12px;
      }
    }

    a {
      color: #03a196;
    }

    iframe {
      width: 300px;
      height: 170px;
      margin-top: 15px;
      display: block;
      margin: 0 auto;

      @media screen and (min-width: $large-phone) {
        width: 420px;
        height: 240px;
      }

      @media screen and (min-width: $tablet) {
        width: 700px;
        height: 400px;
      }
    }

    .button {
      background: #008ffd;
      color: #ffffff;
      border: 1px solid #008ffd;
      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
      font-weight: bold;
      letter-spacing: 1.2px;
      text-transform: uppercase;
      padding: 0 20px;
      font-size: 14px;
      height: 40px;
    }

    table {
      tr {
        border-bottom: 1px solid #DCDCDC;

        &:first-child {
          border-top: 1px solid #DCDCDC;
        }
      }
      td, th {
        padding: 4px;
        border-right: 1px solid #DCDCDC;

        &:first-child {
          border-left: 1px solid #DCDCDC;
        }
      }
    }
  }
}

